...
      }
    },
    "Built-in Cases" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Calculator" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Close" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Contact IFE Flow Department" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Data" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Delete" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Duplicate to My Cases" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "General Properties" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "General Properties is used for calculations." : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Identity" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "IFE — Institute for Energy Technology" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "IFE Model" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Input snapshot" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "mol%" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "More" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "My Cases" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Newest" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Oldest" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Name A–Z" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Name Z–A" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "OK" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Open in Calculator" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Phase Diagram" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Pressure" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Remove impurity" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Saved Cases" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Status" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Stream Mixing" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Temperature" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Validated case" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Validated Cases" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Validation" : {
      "localizations" : {
        "nb" : {
...
      }
    },
    "Validation and capability state" : {
      "localizations" : {
        "nb" : {
...
